// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should be rendered correctly 1`] = `
<label
  className="container root size-18 color-sky theme-light -clickable"
  role="switch"
>
  <div
    className="uui-switch-body"
  >
    <input
      aria-checked={false}
      aria-hidden={true}
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="uui-switch-toggler"
    />
  </div>
  <div
    className="uui-input-label"
    role="label"
  />
</label>
`;

exports[`Switch should be rendered correctly with new props 1`] = `
<label
  className="container root size-12 color-sky theme-dark -clickable"
  role="switch"
>
  <div
    className="uui-switch-body"
  >
    <input
      aria-checked={false}
      aria-hidden={true}
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="uui-switch-toggler"
    />
  </div>
  <div
    className="uui-input-label"
    role="label"
  >
    Open
  </div>
</label>
`;
